--- a/api-server/package.json
+++ b/api-server/package.json
@@ -2,8 +2,9 @@
     "name": "api-server",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
-        "dev": "tsx watch src/index.ts",
+        "dev": "set \"NODE_ENV=development\" && tsx watch src/index.ts",
         "build": "tsc",
         "start": "node dist/index.js",
         "lint": "eslint src --ext .ts",
@@ -30,11 +31,11 @@
         "zod": "^3.24.1"
     },
     "devDependencies": {
-        "@types/cors": "^2.8.17",
-        "@types/express": "^5.0.0",
-        "@types/jsonwebtoken": "^9.0.7",
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.6",
+        "@types/jsonwebtoken": "^9.0.10",
         "@types/morgan": "^1.9.9",
-        "@types/node": "^22.10.2",
+        "@types/node": "^22.19.3",
         "@types/pdfkit": "^0.13.5",
         "@types/uuid": "^10.0.0",
         "eslint": "^8.57.0",
