--- a/narrative-hub/vercel.json
+++ b/narrative-hub/vercel.json
@@ -1,9 +1,3 @@
 {
-    "public": true,
-    "rewrites": [
-        {
-            "source": "/login",
-            "destination": "/dashboard"
-        }
-    ]
+    "public": true
 }
